<resources>
    <string name="app_name">Mother\'s Love</string>
    <string name="app_label">Mother\'s Love</string>
    <string name="package_name">com.babyandi.stephnoutsa.babyandi</string>
    <string name="search_hint">Search Mother\'s Love</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_home">Home</string>
    <string name="menu_anc">Antenatal Clinic</string>
    <string name="menu_malnutrition">Malnutrition</string>
    <string name="menu_diarrhoea">Diarrhoea</string>
    <string name="menu_special_needs">HIV / Hepatitis &amp; Pregnancy</string>
    <string name="button_anc">Antenatal Care</string>
    <string name="button_malnutrition">Malnutrition</string>
    <string name="button_diarrhoea">Diarrhoea</string>
    <string name="button_special_needs">HIV / Hepatitis &amp; Pregnancy</string>
    <string name="title_activity_anc">Antenatal Care</string>
    <string name="title_activity_malnutrition">Malnutrition</string>
    <string name="title_activity_diarrhoea">Diarrhoea</string>
    <string name="title_activity_special_needs">HIV / Hepatitis &amp; Pregnancy</string>
    <string name="menu_diagnosis">How to Diagnose</string>
    <string name="menu_management">Management</string>
    <string name="menu_acute_diarrhoea">Acute Diarrhoea</string>
    <string name="menu_persistent_diarrhoea">Persistent Diarrhoea</string>
    <string name="menu_dysentery">Dysentery</string>
    <string name="menu_hiv">HIV with Pregnancy</string>
    <string name="menu_hepatitis">Hepatitis with Pregnancy</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_how_to_diagnose">How To Diagnose</string>
    <string name="title_activity_management">Management</string>
    <string name="title_activity_introduction_malnutrition">Introduction</string>
    <string name="malnutrition_intro_text" formatted="false">
        The diagnosis of malnutrition can be done using either the <b>Mid Upper Arm Circumference (MUAC)</b>
        or the <b>Z-Score</b> as main criteria, with or without the <b>signs and symptoms</b> listed
        in the "SIGNS &amp; SYMPTOMS" section.
    </string>
    <string name="title_activity_criteria_malnutrition">Main Criteria</string>
    <string name="muac_button_text">Mid Upper Arm Circumference</string>
    <string name="or_button_text"><b>OR</b></string>
    <string name="zscores_button_text">Z-Score (Standard Deviation Score)</string>
    <string name="muac_text" formatted="false">
        <b>Mid Upper Arm Circumference (MUAC)</b>\n
        MUAC can be measured using a tailor\'s tape. The tape is placed midway between the child\'s elbow and the
        shoulder as shown below:\n
    </string>
    <string name="muac_image_description">MUAC</string>
    <string name="muac_image_text">Picture showing how MUAC is measured.\n</string>
    <string name="muac_interpretation_text"><b><u>INTERPRETATION OF RESULTS</u></b></string>
    <string name="muac_reading_text"><b>MUAC</b></string>
    <string name="muac_reading1_text">&gt;12.5cm</string>
    <string name="muac_reading2_text">11.0 &#8211; 12.5cm</string>
    <string name="muac_reading3_text">&lt;11.0cm</string>
    <string name="significance_text"><b>SIGNIFICANCE</b></string>
    <string name="significance1_text">Normal</string>
    <string name="significance2_text">Moderate Malnutrition</string>
    <string name="significance3_text">Severe Malnutrition</string>
    <string name="zscore_text" formatted="false">
        <b>Z-Score (Standard Deviation Score)</b>\n
        \t\u2022 Calculated using the child\'s most recent weight and height. The height should be measured
        using a tape.\n
        You could determine if your child is malnourished by clicking the button below.\n
    </string>
    <string name="zscore_text2" formatted="false">
        \t\u2022 A Z-Score greater than +2 indicates severe malnutrition (overweight).\n
        \t\u2022 A Z-Score between -2 and +2 indicates that your child is not malnourished.\n
        \t\u2022 A Z-Score between -3 and -2 indicates moderate malnutrition (undernutrition).\n
        \t\u2022 A Z-Score of less than -3 indicates severe malnutrition (severe undernutrition).
    </string>
    <string name="zscore_button_text">Calculate Z-Score</string>
    <string name="height_label_text">Enter height (in cm)</string>
    <string name="weight_label_text">Enter weight (in kg)</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="zscore_results">Fill above fields and click &quot;Calculate&quot; button</string>
    <string name="zscore_out_of_bounds" formatted="false">
        Sorry, we cannot calculate your z-score for the given height. Check the height again.
    </string>
    <string name="zscore_empty" formatted="false">
        Please enter both the height and the weight, then try again.
    </string>
    <string name="zscore_announcer">The z-score is</string>
    <string name="zscore_severe_malnutrition" formatted="false">
        This implies that your child is severely malnourished.\n
        For more information, click the button below.\n
    </string>
    <string name="zscore_moderate_malnutrition" formatted="false">
        This implies that your child is moderately malnourished.\n
        For more information, click the button below.\n
    </string>
    <string name="zscore_normal" formatted="false">
        This implies that your child is not malnourished.
    </string>
    <string name="title_activity_zscore">Z-Score</string>
    <string name="title_activity_little">Little</string>
    <string name="title_activity_muac">Mid Upper Arm Circumference</string>
    <string name="title_activity_zscores">Z-Score</string>
    <string name="title_activity_signs_malnutrition">Signs &amp; Symptoms</string>
    <string name="signs_malnutrition_1" formatted="false">
        Use the following signs and symptoms to check for malnutrition in your child:\n
        \t\u2022 Pitting oedema on dorsum of foot (see images below)
    </string>
    <string name="oedema_image1_description">Pressing of dorsum of foot</string>
    <string name="oedema_image2_description">Pitting oedema on dorsum of foot</string>
    <string name="signs_malnutrition_2" formatted="false">
        \t\u2022 Ineffective feeding. That is, suckling difficulties observed for 15 to 20 minutes in
        children less than 6 months of age.\n
        \t\u2022 Moon (round) face.\n
        \t\u2022 Old man\'s face.\n
        \t\u2022 Brown, scanty and brittle (easily breaking) hair.\n
        \t\u2022 Loose and wrinkled skin (see image below).
    </string>
    <string name="loose_skin_image_description">Loose and wrinkled skin</string>
    <string name="signs_malnutrition_3" formatted="false">
        \t\u2022 Distended (large) abdomen.\n
        \t\u2022 Severe body weakness.\n
        \t\u2022 Child not interested in surroundings.\n
        \t\u2022 Muscle wasting, especially in buttocks.\n
        \t\u2022 Visible severe wasting (see image below).
    </string>
    <string name="wasting_image_description">Visible severe wasting</string>
    <string name="signs_malnutrition_4" formatted="false">
        \t\u2022 Hypo or hyper pigmentation of skin (loss of normal skin color).\n
        \t\u2022 Diarrhoea.\n
        \t\u2022 Loss of appetite.
    </string>
    <string name="title_activity_moderate_malnutrition">Moderate Malnutrition</string>
    <string name="moderate_malnutrition_text" formatted="false">
        Supplementary feeding; this should be done by using local foods such as rice, beans and vegetables.\n
        Blended cereals such as corn-soya blend should also be given to the child. (Not soya beans)
    </string>
    <string name="title_activity_severe_malnutrition">Severe Malnutrition</string>
    <string name="anc_package_text" formatted="false">
        The World Health Organization (WHO) now recommends each pregnant woman to have at least FOUR
        focused antenatal care visits before delivery of the baby.\n\n
        The goals and activities of ANC are summarized in each of the sections below:\n
    </string>
    <string name="first_visit_button_text">First ANC Visit</string>
    <string name="second_visit_button_text">Second ANC Visit</string>
    <string name="third_visit_button_text">Third ANC Visit</string>
    <string name="fourth_visit_button_text">Fourth ANC Visit</string>
    <string name="contact_text"><b>CONTACT</b>\n</string>
    <string name="contact_1_text"><b>At Birth</b>\n\n</string>
    <string name="contact_2_text"><b>6 Weeks After\nBirth</b>\n\n\n\n</string>
    <string name="contact_3_text"><b>10 Weeks After\nBirth</b>\n\n\n</string>
    <string name="contact_4_text"><b>14 Weeks After\nBirth</b>\n\n</string>
    <string name="contact_5_text"><b>9 Months After\n Birth</b>\n\n</string>
    <string name="contact_6_text"><b>12 - 59 Months</b></string>
    <string name="vaccines_text"><b>VACCINES (ADMINISTRATION SITE)</b>\n</string>
    <string name="vaccines_1_1_text">BCG (Upper &#8531; of the front face of the left forearm)</string>
    <string name="vaccines_1_2_text">OPV0 (In the mouth)\n</string>
    <string name="vaccines_2_1_text">OPV1 (In the mouth)</string>
    <string name="vaccines_2_2_text">DTC1-HEP B1-Hib1 (Left buttock)</string>
    <string name="vaccines_2_3_text">Pneumo13.1 (Right buttock)</string>
    <string name="vaccines_2_4_text">Rota1 (In the mouth)\n</string>
    <string name="vaccines_3_1_text">OPV2 (In the mouth)</string>
    <string name="vaccines_3_2_text">DTC2-HEP B2-Hib2 (Left buttock)</string>
    <string name="vaccines_3_3_text">Pneumo13.2 (Right buttock)</string>
    <string name="vaccines_3_4_text">Rota2 (In the mouth)\n</string>
    <string name="vaccines_4_1_text">OPV3 (In the mouth)</string>
    <string name="vaccines_4_2_text">DTC3-HEP B3-Hib3 (Left buttock)</string>
    <string name="vaccines_4_3_text">Pneumo13.3 (Right buttock)\n</string>
    <string name="vaccines_5_1_text">Measles (Left deltoid)</string>
    <string name="vaccines_5_2_text">Yellow fever (Left buttock)</string>
    <string name="vaccines_5_3_text">Vitamin A (In the mouth)\n</string>
    <string name="vaccines_6_text">Vitamin A, 2 times per year (In the mouth)</string>
</resources>