<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.babyandi.stephnoutsa.babyandi.ANCPackage"
    tools:showIn="@layout/activity_ancpackage"
    android:background="@drawable/image_anc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/anc_package_text"
                android:id="@+id/ancPackageText"
                android:textColor="@color/colorTextPrimary" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ancPackageText"
                android:layout_centerHorizontal="true"
                android:text="@string/first_visit_button_text"
                android:id="@+id/firstVisit"
                android:background="@drawable/button_standard_border"
                android:onClick="onClickFirstVisit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstVisit"
                android:layout_centerHorizontal="true"
                android:text="@string/second_visit_button_text"
                android:id="@+id/secondVisit"
                android:onClick="onClickSecondVisit"
                android:background="@drawable/button_standard_border"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/secondVisit"
                android:layout_centerHorizontal="true"
                android:text="@string/third_visit_button_text"
                android:id="@+id/thirdVisit"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_standard_border"
                android:onClick="onClickThirdVisit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thirdVisit"
                android:layout_centerHorizontal="true"
                android:text="@string/fourth_visit_button_text"
                android:id="@+id/fourthVisit"
                android:onClick="onClickFourthVisit"
                android:background="@drawable/button_standard_border"
                android:layout_marginTop="20dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
